# totEnJ

./: CITATION.cff  Heisenberg_exchange_from_total_energy.py  LICENSE  README.md  example_linear_chain_monoatomic.ipynb  examples.ipynb  setup.cfg  utils.py
examples/: example_bulk_bcc.ipynb  example_linear_chain_monoatomic.ipynb  exchange_coupling_hexagonal_mesh.ipynb
src/totEnJ/: example_linear_chain_monoatomic.ipynb  exchange_coupling_hexagonal_mesh.ipynb  prepare_spin_states.py  utils.py
