[metadata]
name = totEnJ
version = 0.1.0
author = L. Vojacek
author_email = Libor.Vojacek@vutbr.cz
description = Heisenberg Hamitlonian parametrization from ab initio total energy of magnetic supercells
long_description = file: README.md, LICENSE
license = BSD 3-Clause License

[options]
package_dir=
    =src
packages = 
    totEnJ
install_requires =
    numpy
    matplotlib
    scipy
    pytest
    pytest-cov
    pytest-mpl
